Button and validation in HTML

--- a/index.html
+++ b/index.html
@@ -79,11 +79,13 @@
                 <br>
                 <textarea id="mensaje"></textarea>
                 <br>
+
             </div>
 
-
-
         </fieldset>
+        <br>
+        <br>
+        <input type="submit" value="Enviar" class="buttom">
     </form>
 </body>
 
