--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
             </div>
         </fieldset>
         <br>
-        <input type="submit" value="Enviar" class="buttom">
+        <input type="submit" onclick='return sendForm()' value="Enviar" class="buttom">
     </form>
 </body>
 
