--- a/index.html
+++ b/index.html
@@ -6,94 +6,67 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/style.css">
-    <script src="/js/app.js"></script>
     <title>Midterm Exam</title>
 </head>
 
 <body>
-    <form action="">
-        <fieldset>
-            <legend>Registro</legend>
-            <div>
-                <label for="name">Nombre:</label>
-                <br>
-                <input type="text" id="name" placeholder="Ingrese su nombre" required>
-                <br>
-                <br>
-            </div>
-            <div>
-                <label for="lastName">Apellido:</label>
-                <br>
-                <input type="text" id="lastName" placeholder="Ingrese su Apellido" required>
-                <br>
-                <br>
-            </div>
-            <div>
-                <label for="email">E-mail: </label>
-                <br>
-                <input type="text" id="email" placeholder="Ingrese su Correo" required>
-                <br>
-                <br>
-            </div>
-            <div>
-                <label for="age">Edad:</label>
-                <br>
-                <input type="text" id="age" placeholder="Ingrese su Edad" required>
-                <br>
-                <br>
-            </div>
-            <div class="sex">
-                <label for="sex">Sexo:</label>
-                <br>
-                <input type="radio" name="sex" value="woman" id="woman" required>
-                <label for="woman">Mujer</label>
-                <br>
-                <input type="radio" name="sex" value="man" id="man">
-                <label for="man">Hombre</label>
-                <br>
-                <input type="radio" name="sex" value="otherSex" id="otherSex">
-                <label for="otherSex">Otro</label>
-                <br>
-                <br>
-            </div>
-            <div>
-                <label for="interest">Temas de interés:</label>
-                <br>
-                <input type="checkbox" name="music" value="music" id="music">
-                <label for="music">Música</label>
-                <br>
-                <input type="checkbox" name="sport" value="sport" id="sport">
-                <label for="sport">Deporte</label>
-                <br>
-                <input type="checkbox" name="game" value="game" id="game">
-                <label for="game">Juegos</label>
-                <br>
-                <input type="checkbox" name="technology" value="technology" id="technology">
-                <label for="technology">Tecnología</label>
-                <br>
-                <input type="checkbox" name="otherInterest" value="otherInterest" id="otherInterest">
-                <label for="otherInterest">Otros</label>
-                <br>
-                <br>
-            </div>
-            <label for="country">País</label>
-            <select id="country">
+    <form action="" id="form">
+        <div>
+            <label for="name">Nombre:</label>
+            <input type="text" id="name" placeholder="Ingrese su nombre">
+        </div>
+        <div>
+            <label for="lastName">Apellido:</label>
+            <input type="text" id="lastName" placeholder="Ingrese su Apellido">
+        </div>
+        <div>
+            <label for="email">E-mail: </label>
+            <input type="text" id="email" placeholder="Ingrese su Correo">
+        </div>
+        <div>
+            <label for="age">Edad:</label>
+            <input type="text" id="age" placeholder="Ingrese su Edad">
+        </div>
+        <div class="sex">
+            <label for="sex">Sexo:</label>
+            <input type="radio" name="sex" value="woman" id="woman">
+            <label for="woman">Mujer</label>
+            <input type="radio" name="sex" value="man" id="man">
+            <label for="man">Hombre</label>
+            <input type="radio" name="sex" value="otherSex" id="otherSex">
+            <label for="otherSex">Otro</label>
+        </div>
+        <div>
+            <label for="interest">Temas de interés:</label>
+            <input type="checkbox" name="music" value="music" id="music">
+            <label for="music">Música</label>
+            <input type="checkbox" name="sport" value="sport" id="sport">
+            <label for="sport">Deporte</label>
+            <input type="checkbox" name="game" value="game" id="game">
+            <label for="game">Juegos</label>
+            <input type="checkbox" name="technology" value="technology" id="technology">
+            <label for="technology">Tecnología</label>
+            <input type="checkbox" name="otherInterest" value="otherInterest" id="otherInterest">
+            <label for="otherInterest">Otros</label>
+        </div>
+        <label for="country">País</label>
+        <select id="country">
                     <option value="" disabled selected>-- Seleccione un País --</option>
                     <option value="argentina">Argentina</option>
                     <option value="chile">Chile</option>
                     <option value="brazil">Brasil</option>
                     <option value="Uruguay">Uruguay</option>
                 </select>
-            <div>
-                <label for="message">Mensaje: </label>
-                <br>
-                <textarea id="message"></textarea>
-                <br>
-            </div>
+        <div>
+            <label for="message">Mensaje: </label>
+            <textarea id="message"></textarea>
+        </div>
+        <div id="error"></div>
         </fieldset>
         <br>
-        <input type="submit" onclick='return sendForm()' value="Enviar" class="buttom">
+        <input type="submit" value="Enviar" class="buttom">
     </form>
+    <script src="/js/app.js"></script>
 </body>
 
 </html>
