--- a/index.html
+++ b/index.html
@@ -11,59 +11,70 @@
 
 <body>
     <form action="" id="form">
-        <div>
-            <label for="name">Nombre:</label>
-            <input type="text" id="name" placeholder="Ingrese su nombre">
-        </div>
-        <div>
-            <label for="lastName">Apellido:</label>
-            <input type="text" id="lastName" placeholder="Ingrese su Apellido">
-        </div>
-        <div>
-            <label for="email">E-mail: </label>
-            <input type="text" id="email" placeholder="Ingrese su Correo">
-        </div>
-        <div>
-            <label for="age">Edad:</label>
-            <input type="text" id="age" placeholder="Ingrese su Edad">
-        </div>
+
+        <h1>Registro</h1>
+        <label for="name">Nombre:</label>
+        <input type="name" id="name" placeholder="Ingrese su nombre">
+
+        <label for="lastName">Apellido:</label>
+        <input type="lastName" id="lastName" placeholder="Ingrese su Apellido">
+
+        <label for="email">E-mail: </label>
+        <input type="email" id="email" placeholder="Ingrese su Correo">
+
+        <label for="age">Edad:</label>
+        <input type="age" id="age" placeholder="Ingrese su Edad">
         <div class="sex">
             <label for="sex">Sexo:</label>
-            <input type="radio" name="sex" value="woman" id="woman">
-            <label for="woman">Mujer</label>
-            <input type="radio" name="sex" value="man" id="man">
-            <label for="man">Hombre</label>
-            <input type="radio" name="sex" value="otherSex" id="otherSex">
-            <label for="otherSex">Otro</label>
+            <div>
+                <input type="radio" name="sex" value="woman" id="woman">
+                <label for="woman">Mujer</label>
+            </div>
+            <div>
+                <input type="radio" name="sex" value="man" id="man">
+                <label for="man">Hombre</label>
+            </div>
+            <div>
+                <input type="radio" name="sex" value="otherSex" id="otherSex">
+                <label for="otherSex">Otro</label>
+            </div>
+        </div>
+        <div class="interest">
+            <label for="interest">Temas de interés:</label>
+            <div>
+                <input type="checkbox" name="music" value="music" id="music">
+                <label for="music">Música</label>
+            </div>
+            <div>
+                <input type="checkbox" name="sport" value="sport" id="sport">
+                <label for="sport">Deporte</label>
+            </div>
+            <div>
+                <input type="checkbox" name="game" value="game" id="game">
+                <label for="game">Juegos</label>
+            </div>
+            <div>
+                <input type="checkbox" name="technology" value="technology" id="technology">
+                <label for="technology">Tecnología</label>
+            </div>
+            <div>
+                <input type="checkbox" name="otherInterest" value="otherInterest" id="otherInterest">
+                <label for="otherInterest">Otros</label>
+            </div>
         </div>
         <div>
-            <label for="interest">Temas de interés:</label>
-            <input type="checkbox" name="music" value="music" id="music">
-            <label for="music">Música</label>
-            <input type="checkbox" name="sport" value="sport" id="sport">
-            <label for="sport">Deporte</label>
-            <input type="checkbox" name="game" value="game" id="game">
-            <label for="game">Juegos</label>
-            <input type="checkbox" name="technology" value="technology" id="technology">
-            <label for="technology">Tecnología</label>
-            <input type="checkbox" name="otherInterest" value="otherInterest" id="otherInterest">
-            <label for="otherInterest">Otros</label>
-        </div>
-        <label for="country">País</label>
-        <select id="country">
+            <label for="country">País</label>
+            <select id="country">
                     <option value="" disabled selected>-- Seleccione un País --</option>
                     <option value="argentina">Argentina</option>
                     <option value="chile">Chile</option>
                     <option value="brazil">Brasil</option>
                     <option value="Uruguay">Uruguay</option>
                 </select>
-        <div>
-            <label for="message">Mensaje: </label>
-            <textarea id="message"></textarea>
         </div>
+        <label for="message">Mensaje: </label>
+        <textarea id="message"></textarea>
         <div id="error"></div>
-        </fieldset>
-        <br>
         <input type="submit" value="Enviar" class="buttom">
     </form>
     <script src="/js/app.js"></script>
