--- a/index.html
+++ b/index.html
@@ -13,18 +13,24 @@
     <form action="" id="form">
 
         <h1>Registro</h1>
-        <label for="name">Nombre:</label>
-        <input type="name" id="name" placeholder="Ingrese su nombre">
-
-        <label for="lastName">Apellido:</label>
-        <input type="lastName" id="lastName" placeholder="Ingrese su Apellido">
-
-        <label for="email">E-mail: </label>
-        <input type="email" id="email" placeholder="Ingrese su Correo">
-
-        <label for="age">Edad:</label>
-        <input type="age" id="age" placeholder="Ingrese su Edad">
+        <div class="text">
+            <label for="name">Nombre:</label>
+            <input type="name" id="name" placeholder="Ingrese su nombre">
+        </div>
+        <div class="text">
+            <label for="lastName">Apellido:</label>
+            <input type="lastName" id="lastName" placeholder="Ingrese su Apellido">
+        </div>
+        <div class="text">
+            <label for="email">E-mail: </label>
+            <input type="email" id="email" placeholder="Ingrese su Correo">
+        </div>
+        <div class="text">
+            <label for="age">Edad:</label>
+            <input type="age" id="age" placeholder="Ingrese su Edad">
+        </div>
         <div class="sex">
+
             <label for="sex">Sexo:</label>
             <div>
                 <input type="radio" name="sex" value="woman" id="woman">
@@ -62,7 +68,7 @@
                 <label for="otherInterest">Otros</label>
             </div>
         </div>
-        <div>
+        <div class="country">
             <label for="country">País</label>
             <select id="country">
                     <option value="" disabled selected>-- Seleccione un País --</option>
