--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/style.css">
+    <script src="/js/app.js"></script>
     <title>Midterm Exam</title>
 </head>
 
@@ -47,43 +48,44 @@
         </div>
         <div class="interest">
             <label for="interest">Temas de interés:</label>
-            <div>
-                <input type="checkbox" name="music" value="music" id="music">
-                <label for="music">Música</label>
-            </div>
-            <div>
-                <input type="checkbox" name="sport" value="sport" id="sport">
-                <label for="sport">Deporte</label>
-            </div>
-            <div>
-                <input type="checkbox" name="game" value="game" id="game">
-                <label for="game">Juegos</label>
-            </div>
-            <div>
-                <input type="checkbox" name="technology" value="technology" id="technology">
-                <label for="technology">Tecnología</label>
-            </div>
-            <div>
-                <input type="checkbox" name="otherInterest" value="otherInterest" id="otherInterest">
-                <label for="otherInterest">Otros</label>
-            </div>
+
+
+            <input type="checkbox" name="music" value="music" id="music">
+            <label for="music">Música</label>
+
+
+            <input type="checkbox" name="sport" value="sport" id="sport">
+            <label for="sport">Deporte</label>
+
+
+
+            <input type="checkbox" name="game" value="game" id="game">
+            <label for="game">Juegos</label>
+
+
+            <input type="checkbox" name="technology" value="technology" id="technology">
+            <label for="technology">Tecnología</label>
+
+
+            <input type="checkbox" name="otherInterest" value="otherInterest" id="otherInterest">
+            <label for="otherInterest">Otros</label>
+
         </div>
         <div class="country">
             <label for="country">País</label>
             <select id="country">
-                    <option value="" disabled selected>-- Seleccione un País --</option>
-                    <option value="argentina">Argentina</option>
-                    <option value="chile">Chile</option>
-                    <option value="brazil">Brasil</option>
-                    <option value="Uruguay">Uruguay</option>
+                    <option id="selected" value="selected"  disabled selected>-- Seleccione un País --</option>
+                    <option id= "argentina" value="argentina">Argentina</option>
+                    <option id ="chile" value="chile">Chile</option>
+                    <option id ="brazil" value="brazil">Brasil</option>
+                    <option id ="Uruguay" value="Uruguay">Uruguay</option>
                 </select>
         </div>
         <label for="message">Mensaje: </label>
         <textarea id="message"></textarea>
         <div id="error"></div>
-        <input type="submit" value="Enviar" class="buttom">
+        <input id='send' type="submit" value="Enviar" class="buttom">
     </form>
-    <script src="/js/app.js"></script>
 </body>
 
 </html>
