--- a/index.html
+++ b/index.html
@@ -49,27 +49,27 @@
         <div class="interest">
             <label for="interest">Temas de interés:</label>
 
+            <div>
+                <input type="checkbox" name="music" value="music" id="music">
+                <label for="music">Música</label>
+            </div>
+            <div>
+                <input type="checkbox" name="sport" value="sport" id="sport">
+                <label for="sport">Deporte</label>
+            </div>
 
-            <input type="checkbox" name="music" value="music" id="music">
-            <label for="music">Música</label>
-
-
-            <input type="checkbox" name="sport" value="sport" id="sport">
-            <label for="sport">Deporte</label>
-
-
-
-            <input type="checkbox" name="game" value="game" id="game">
-            <label for="game">Juegos</label>
-
-
-            <input type="checkbox" name="technology" value="technology" id="technology">
-            <label for="technology">Tecnología</label>
-
-
-            <input type="checkbox" name="otherInterest" value="otherInterest" id="otherInterest">
-            <label for="otherInterest">Otros</label>
-
+            <div>
+                <input type="checkbox" name="game" value="game" id="game">
+                <label for="game">Juegos</label>
+            </div>
+            <div>
+                <input type="checkbox" name="technology" value="technology" id="technology">
+                <label for="technology">Tecnología</label>
+            </div>
+            <div>
+                <input type="checkbox" name="otherInterest" value="otherInterest" id="otherInterest">
+                <label for="otherInterest">Otros</label>
+            </div>
         </div>
         <div class="country">
             <label for="country">País</label>
@@ -78,7 +78,7 @@
                     <option id= "argentina" value="argentina">Argentina</option>
                     <option id ="chile" value="chile">Chile</option>
                     <option id ="brazil" value="brazil">Brasil</option>
-                    <option id ="Uruguay" value="Uruguay">Uruguay</option>
+                    <option id ="uruguay" value="uruguay">Uruguay</option>
                 </select>
         </div>
         <label for="message">Mensaje: </label>
