Reset message error

--- a/index.html
+++ b/index.html
@@ -50,24 +50,24 @@
             <label for="interest">Temas de interés:</label>
 
             <div>
-                <input type="checkbox" name="music" value="music" id="music">
+                <input type="checkbox" name="interest" value="music" id="music">
                 <label for="music">Música</label>
             </div>
             <div>
-                <input type="checkbox" name="sport" value="sport" id="sport">
+                <input type="checkbox" name="interest" value="sport" id="sport">
                 <label for="sport">Deporte</label>
             </div>
 
             <div>
-                <input type="checkbox" name="game" value="game" id="game">
+                <input type="checkbox" name="interest" value="game" id="game">
                 <label for="game">Juegos</label>
             </div>
             <div>
-                <input type="checkbox" name="technology" value="technology" id="technology">
+                <input type="checkbox" name="interest" value="technology" id="technology">
                 <label for="technology">Tecnología</label>
             </div>
             <div>
-                <input type="checkbox" name="otherInterest" value="otherInterest" id="otherInterest">
+                <input type="checkbox" name="interest" value="otherInterest" id="otherInterest">
                 <label for="otherInterest">Otros</label>
             </div>
         </div>
