--- a/index.html
+++ b/index.html
@@ -6,86 +6,88 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/style.css">
-    <script src="/js/app.js"></script>
+    <script src="./js/app.js"></script>
     <title>Midterm Exam</title>
 </head>
 
 <body>
-    <form action="" id="form">
+    <div class="wrapper">
+        <form action="" id="form">
 
-        <h1>Registro</h1>
-        <div class="text">
-            <label for="name">Nombre:</label>
-            <input type="name" id="name" placeholder="Ingrese su nombre">
-        </div>
-        <div class="text">
-            <label for="lastName">Apellido:</label>
-            <input type="lastName" id="lastName" placeholder="Ingrese su Apellido">
-        </div>
-        <div class="text">
-            <label for="email">E-mail: </label>
-            <input type="email" id="email" placeholder="Ingrese su Correo">
-        </div>
-        <div class="text">
-            <label for="age">Edad:</label>
-            <input type="age" id="age" placeholder="Ingrese su Edad">
-        </div>
-        <div class="sex">
+            <h1>Registro</h1>
+            <div class="text">
+                <label for="name">Nombre:</label>
+                <input type="name" id="name" placeholder="Ingrese su nombre">
+            </div>
+            <div class="text">
+                <label for="lastName">Apellido:</label>
+                <input type="lastName" id="lastName" placeholder="Ingrese su Apellido">
+            </div>
+            <div class="text">
+                <label for="email">E-mail: </label>
+                <input type="email" id="email" placeholder="Ingrese su Correo">
+            </div>
+            <div class="text">
+                <label for="age">Edad:</label>
+                <input type="age" id="age" placeholder="Ingrese su Edad">
+            </div>
+            <div class="sex">
 
-            <label for="sex">Sexo:</label>
-            <div>
+                <label for="sex">Sexo:</label><br>
+
                 <input type="radio" name="sex" value="woman" id="woman">
-                <label for="woman">Mujer</label>
-            </div>
-            <div>
+                <label for="woman">Mujer</label> <br>
+
+
                 <input type="radio" name="sex" value="man" id="man">
-                <label for="man">Hombre</label>
-            </div>
-            <div>
+                <label for="man">Hombre</label></br>
+
+
                 <input type="radio" name="sex" value="otherSex" id="otherSex">
-                <label for="otherSex">Otro</label>
-            </div>
-        </div>
-        <div class="interest">
-            <label for="interest">Temas de interés:</label>
+                <label for="otherSex">Otro</label> <br>
 
-            <div>
-                <input type="checkbox" name="interest" value="music" id="music">
-                <label for="music">Música</label>
-            </div>
-            <div>
-                <input type="checkbox" name="interest" value="sport" id="sport">
-                <label for="sport">Deporte</label>
-            </div>
+                <div class="interest">
+                    <label for="interest">Temas de interés:</label><br>
 
-            <div>
-                <input type="checkbox" name="interest" value="game" id="game">
-                <label for="game">Juegos</label>
+
+                    <input type="checkbox" name="interest" value="music" id="music">
+                    <label for="music">Música</label> <br>
+
+
+                    <input type="checkbox" name="interest" value="sport" id="sport">
+                    <label for="sport">Deporte</label> <br>
+
+
+
+                    <input type="checkbox" name="interest" value="game" id="game">
+                    <label for="game">Juegos</label> <br>
+
+
+                    <input type="checkbox" name="interest" value="technology" id="technology">
+                    <label for="technology">Tecnología</label> <br>
+
+
+                    <input type="checkbox" name="interest" value="otherInterest" id="otherInterest">
+                    <label for="otherInterest">Otros</label> <br>
+                </div>
+
             </div>
-            <div>
-                <input type="checkbox" name="interest" value="technology" id="technology">
-                <label for="technology">Tecnología</label>
-            </div>
-            <div>
-                <input type="checkbox" name="interest" value="otherInterest" id="otherInterest">
-                <label for="otherInterest">Otros</label>
-            </div>
-        </div>
-        <div class="country">
-            <label for="country">País</label>
-            <select id="country">
+            <div class="country">
+                <label for="country">País</label>
+                <select id="country">
                     <option id="selected" value="selected"  disabled selected>-- Seleccione un País --</option>
                     <option id= "argentina" value="argentina">Argentina</option>
                     <option id ="chile" value="chile">Chile</option>
                     <option id ="brazil" value="brazil">Brasil</option>
                     <option id ="uruguay" value="uruguay">Uruguay</option>
                 </select>
-        </div>
-        <label for="message">Mensaje: </label>
-        <textarea id="message"></textarea>
-        <div id="error"></div>
-        <input id='send' type="submit" value="Enviar" class="buttom">
-    </form>
+            </div>
+            <label for="message">Mensaje: </label>
+            <textarea id="message"></textarea>
+            <div id="error"></div>
+            <input id='send' type="submit" value="Enviar" class="buttom">
+        </form>
+    </div>
 </body>
 
 </html>
